
#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.3.xx
DATE 0x/0x/2008
15th Alpha Release

NEWS:

NEW: [features/improvements]
+Add Find All feature (Current Document, All open documents, in files)
+Add Replace All (Current Document, All open documents)
+Option to set prefered encoding to use when detecting/guessing fails
+New Syntax Highlighting Scheme 'BlackBoard'
+Improved auto-indent functionality for
    - ActionScript        - C              - CPP
    - CSS                 - C#             - D
    - Editra Style Sheets - Ferite         - Fortran 77
    - Fortran 95          - haXe           - Inno Setup Scripts
    - Java                - JavaScript     - Objective C
    - PHP                 - Pike           - Ruby
    - Squirrel            - TCL/Tk         - Vala
+Show Filetype and Encoding information in statusbar (from shaohao)
+Double click on statusbar line/column section opens goto line control (shaohao)
+Add support for newLISP (from Jeff)
+Add Czech translation (contributed by Tomas Fryda)
+Numerous general Ui improvements
+Add right click context menu to tab area for access to some quick file options
+Add To Uppercase and To Lowercase items to text buffer context menu

BUG FIXES:
+Properly update titlebar and other contexts when page change is initiated from
an error hotspot in Launch window.
+Fix source installer not installing pygments package
+Fix focus not getting set to text buffer when switching tabs with ctrl+tab on
Windows.
+Fix some issues with the ipc server failing to connect
+Fix some export issues in the Style Editor

#-----------------------------------------------------------------------------#

VERSION 0.3.38
DATE 08/07/2008
14th Alpha Release

NEWS:

This release adds a number of new features and is the start of a platform for
future enhancements. The main items added in this round are the enhancements to